@@ -1,15 +1,15 @@
 Begin4
 Title: procps
-Version: 3.0.4
-Entered-date: 2002-10-15
+Version: 3.0.5
+Entered-date: 2002-10-20
 Description: Linux system utilities
 Keywords: procps /proc libproc sysctl
 	ps uptime tload free w top vmstat watch skill snice kill pgrep pkill
 Author: Albert Cahalan, Michael K. Johnson, Jim Warner, etc.
 Maintained-by: various <procps-feedback@lists.sf.net>
 Primary-site: http://procps.sf.net/
-	230kB procps-3.0.4.tar.gz
+	230kB procps-3.0.5.tar.gz
 Alternate-site: http://www.debian.org/Packages/unstable/base/procps.html
-	230kB procps-3.0.4.tar.gz
+	230kB procps-3.0.5.tar.gz
 Copying-policy: mixed
 End
