@@ -1,3 +1,8 @@
+procps-3.0.4 --> procps-3.0.5
+
+top tolerates super-wide displays
+better (?) RPM generation
+
 procps-3.0.3 --> procps-3.0.4
 
 make top go faster
